# TSE-Stock-Crawler

./: .gitignore  ChangeDataHyphen.ipynb  GetID.py  GetListedStockIDList.ipynb  GetOTCStockIDList.ipynb  GetStockIDList.ipynb  ModifyCSV.ipynb  OTC_1006.py  OTC_Important_StockID.csv  Stock.py  Stock_0517.py  Stock_0907.py  Stock_0908.py  Stock_0930.py  Stock_1017.py  TSE_1006.py  TSE_Important_StockID.csv  class.csv  pyproject.toml  stock.ipynb  stock_id_all.csv  stock_tse_crawler.py  test.ipynb  type.csv
GETID/: ChangeDataHyphen.ipynb  GetListedStockIDList.ipynb  MergeCSV.ipynb  ModifyCSV.ipynb  classCSV.ipynb
ListedStockID/: ListedAll.csv  TDR台灣存託憑證.csv  化學類.csv  營建類.csv  玻璃陶磁類.csv  綜合類.csv  證券類.csv  鋼鐵類.csv  食品類.csv
NewListedStockID/: All.csv  urgent_0930.csv  光電業.csv  其他業.csv  其他電子業.csv  化學工業.csv  半導體業.csv  塑膠工業.csv  建材營造業.csv  橡膠工業.csv  水泥工業.csv  汽車工業.csv  油電燃氣業.csv  玻璃陶瓷.csv  生技醫療業.csv  紡織纖維.csv  航運業.csv  觀光事業.csv  貿易百貨業.csv  資訊服務業.csv  通信網路業.csv  造紙工業.csv  金融保險業.csv  鋼鐵工業.csv  電器電纜.csv  電子通路業.csv  電子零組件業.csv  電機機械.csv  電腦及週邊設備業.csv  食品工業.csv
OTCStockID/: 橡膠類.csv  玻璃類.csv  紡織纖維類.csv  證券類.csv  貿易百貨類.csv  資訊電子類.csv  軟體類.csv  金融保險類.csv  鋼鐵類.csv  電器電纜類.csv  電機類.csv  食品類.csv
StockID/: TDR台灣存託憑證.csv  其他類.csv  化學類.csv  塑膠類.csv  橡膠類.csv  水泥類.csv  汽車類.csv  營建類.csv  玻璃陶磁類.csv  紡織纖維類.csv  觀光類.csv  證券類.csv  貿易百貨類.csv  資訊電子類.csv  造紙類.csv  運輸類.csv  金融保險類.csv  鋼鐵類.csv  電器電纜類.csv  電機類.csv  食品類.csv
StockList/: Get_Important_StockID.py  TSE_Important_StockID.csv  stock_id_all.csv
Stock_OldVersion/: Stock_0908.py
old file/GETID/: All.csv  (+1 more)
tests/: test_stocktse.py
(+16 files in other folders)
