[tool.poetry]
name = "StockTSE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
ipykernel = "^6.15.1"
requests = "^2.28.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
